2010-09-17  Peter Rosin  <peda@lysator.liu.se>

	Copy over DLL_EXPORT handling from C to C++ for non-GCC on w32.
	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC) [mingw, cygwin, os2]
	[pw32, cegcc]: Copy over the DLL_EXPORT handling from C to C++.

2010-09-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	LTO: consistently accept -fwhopr* and -flto* for GCC.
	* libltdl/config/ltmain.m4sh (func_mode_link): Accept -fwhopr*.
	* libltdl/m4/libtool.m4 (_LT_SYS_HIDDEN_LIBDEPS): Also match
	-flto*.

2010-09-17  Charles Wilson  <libtool@cwilson.fastmail.fm>

	Fix order of PATH manipulation in cwrapper and shwrapper
	* libltdl/config/ltmain.m4sh (func_emit_cwrapperexe_src:main): Call
	lt_update_exe_path before lt_update_lib_path, to ensure that the
	temporary rpath values (which include the OBJDIRs of uninstalled
	libtool libraries) precede installation and final -rpath directories.
	(func_emit_wrapper): Prepend $dllsearchpath to PATH before prepending
	$temp_rpath to $shlibpath_var; similar rationale as above.
	Reported by Jon Turney <jon.turney@dronecode.org.uk>

2010-09-17  Charles Wilson  <libtool@cwilson.fastmail.fm>

	Document libtool variable to_host_file_cmd.
	* doc/libtool.texi (libtool script contents:to_host_file_cmd):
	Document variable.
	(libtool script contents:to_tool_file_cmd): Prefer `build platform'
	to `build system'; Ditto `host platform'.

2010-09-16  Charles Wilson  <libtool@cwilson.fastmail.fm>

	Fix sh.test failure introduced in 72064249
	* libltdl/config/ltmain.m4sh (func_mode_link): Avoid poor
	syntax.

2010-09-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: avoid localization failure due to unstable compiler messages.
	* tests/testsuite.at (LT_AT_NORMALIZE_COMPILER_OUTPUT):
	Attempt to normalize temporary file names in error messages.
	Fixes 'localized compiler messages' test failure on Darwin when
	creating fat (multi-ABI) libraries.

2010-09-13  Peter Rosin  <peda@lysator.liu.se>

	Prefer $NM @file when the toolchain isn't native to $build.